//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Therapist {
  id String [pk]
  name String
  email String [unique, not null]
  imageUrl String
  bookingUrl String
  googleMeetUrl String [default: 'https://meet.google.com/']
  about String
  rating Int
  experience Int
  onboarded Boolean [default: false]
  consultationFee Int
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  active Boolean [not null, default: true]
  feedback Feedback [not null]
  categories TherapistCategories [not null]
  chatSubscription ChatSubscription [not null]
  qualification String [not null]
  booking Booking [not null]
}

Table TherapistCategories {
  id String [pk]
  therapistId String
  categoryId String
  experience Int [not null, default: 0]
  category Category
  therapist Therapist
}

Table Patient {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  imageUrl String
  active Boolean [default: true]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  feedback Feedback [not null]
  booking Booking [not null]
  chatSubscription ChatSubscription [not null]
  subscriptionId String
  subscription Subscription
}

Table Friend {
  id String [pk]
  userId String [not null]
  friendId String [not null]
  friendName String [not null]
  imageUrl String [not null]
  isFriend Boolean [not null, default: true]
  followedOn DateTime [default: `now()`]
}

Table ChatSubscription {
  id String [pk]
  patientId String [not null]
  therapistId String [not null]
  isSubscribed Boolean [not null, default: true]
  SubscribedOn DateTime [default: `now()`]
  patient Patient [not null]
  therapist Therapist [not null]

  indexes {
    (patientId, therapistId) [unique]
  }
}

Table Mood {
  UserId String [pk]
  userMood Int [not null, default: 5]
}

Table Category {
  id String [pk]
  name String [unique, not null]
  active Boolean [default: true]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  therapists TherapistCategories [not null]
}

Table Feedback {
  id String [pk]
  patientId String [not null]
  therapistId String [not null]
  rating Int [not null]
  comment String [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
  patient Patient [not null]
  therapist Therapist [not null]
}

Table Subscription {
  id String [pk]
  fee Int [not null]
  active Boolean [default: true]
  patientId String
  patient Patient [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Booking {
  id String [pk]
  status Status [not null, default: 'PENDING']
  fees Int [not null]
  orderId String [unique]
  patientId String [not null]
  therapistId String [not null]
  patient Patient [not null]
  therapist Therapist [not null]
  createdAt DateTime [default: `now()`]
  updatedAt DateTime
}

Table Conversation {
  id String [pk]
  content String [not null]
  senderId String [not null]
  recieverId String [not null]
  createdAt DateTime [default: `now()`]
  readAt String
}

Table HabitProgress {
  id String [pk]
  answer1 String [not null]
  answeredAt DateTime [not null]
  treatmentId String [not null]
}

Table NewsletterSubs {
  id String [pk]
  email String [not null]
  name String [not null]
}

Enum Status {
  PENDING
  BOOKED
  COMPLETED
  CANCELLED
}

Ref: TherapistCategories.categoryId > Category.id

Ref: TherapistCategories.therapistId > Therapist.id

Ref: Patient.subscriptionId > Subscription.id

Ref: ChatSubscription.patientId > Patient.id

Ref: ChatSubscription.therapistId > Therapist.id

Ref: Feedback.patientId > Patient.id

Ref: Feedback.therapistId > Therapist.id

Ref: Booking.patientId > Patient.id

Ref: Booking.therapistId > Therapist.id